--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "food-project",
-	"homepage": "https://AlexDvor.github.io/react-food-spa",
+	"homepage": "https://AlexDvor.github.io/react-food",
 	"version": "0.1.0",
 	"private": true,
 	"type": "module",
